# serializer version: 1
# name: ProcessViewsTest.test_details_for_company_transition_logs_hides_hired_by_other
  '''
  <ul class="list-step" id="transition_logs_11111111-1111-1111-1111-111111111111">
      
          
              <li>
                  <time datetime="2023-12-12T12:38:00+00:00">Le 12 décembre 2023 à 13:38</time>
                  <span>
                      
                          Passé en "Embauché ailleurs"
                      
                      
                  </span>
              </li>
          
          <li>
              <time datetime="2023-12-10T10:11:00+00:00">Le 10 décembre 2023 à 11:11</time>
              <span>Nouvelle candidature</span>
          </li>
      
  </ul>
  '''
# ---
# name: ProcessViewsTest.test_details_for_company_with_transition_logs
  '''
  <ul class="list-step" id="transition_logs_11111111-1111-1111-1111-111111111111">
      
          
              <li>
                  <time datetime="2023-12-12T12:38:00+00:00">Le 12 décembre 2023 à 13:38</time>
                  <span>
                      
                          Passé en "Candidature acceptée"
                      
                      par John DOE
                  </span>
              </li>
          
              <li>
                  <time datetime="2023-12-12T12:37:00+00:00">Le 12 décembre 2023 à 13:37</time>
                  <span>
                      
                          Passé en "Candidature à l'étude"
                      
                      par John DOE
                  </span>
              </li>
          
          <li>
              <time datetime="2023-12-10T10:11:00+00:00">Le 10 décembre 2023 à 11:11</time>
              <span>Nouvelle candidature</span>
          </li>
      
  </ul>
  '''
# ---
# name: ProcessViewsTest.test_details_for_job_seeker_with_transition_logs
  '''
  <ul class="list-step" id="transition_logs_11111111-1111-1111-1111-111111111111">
      
          
              <li>
                  <time datetime="2023-12-12T12:38:00+00:00">Le 12 décembre 2023 à 13:38</time>
                  <span>
                      
                          Passé en "Candidature acceptée"
                      
                      par John DOE
                  </span>
              </li>
          
              <li>
                  <time datetime="2023-12-12T12:37:00+00:00">Le 12 décembre 2023 à 13:37</time>
                  <span>
                      
                          Passé en "Candidature à l'étude"
                      
                      par John DOE
                  </span>
              </li>
          
          <li>
              <time datetime="2023-12-10T10:11:00+00:00">Le 10 décembre 2023 à 11:11</time>
              <span>Nouvelle candidature</span>
          </li>
      
  </ul>
  '''
# ---
# name: ProcessViewsTest.test_details_for_prescriber_with_transition_logs
  '''
  <ul class="list-step" id="transition_logs_11111111-1111-1111-1111-111111111111">
      
          
              <li>
                  <time datetime="2023-12-12T12:38:00+00:00">Le 12 décembre 2023 à 13:38</time>
                  <span>
                      
                          Passé en "Candidature acceptée"
                      
                      par John DOE
                  </span>
              </li>
          
              <li>
                  <time datetime="2023-12-12T12:37:00+00:00">Le 12 décembre 2023 à 13:37</time>
                  <span>
                      
                          Passé en "Candidature à l'étude"
                      
                      par John DOE
                  </span>
              </li>
          
          <li>
              <time datetime="2023-12-10T10:11:00+00:00">Le 10 décembre 2023 à 11:11</time>
              <span>Nouvelle candidature</span>
          </li>
      
  </ul>
  '''
# ---
# name: ProcessViewsTest.test_external_transfer_log_display
  '''
  <ul class="list-step" id="transition_logs_11111111-1111-1111-1111-111111111111">
      
          
              <li>
                  <time datetime="2023-12-12T12:38:00+00:00">Le 12 décembre 2023 à 13:38</time>
                  <span>
                      
                          Candidature transférée à un autre employeur
                      
                      par John DOE
                  </span>
              </li>
          
              <li>
                  <time datetime="2023-12-12T12:37:00+00:00">Le 12 décembre 2023 à 13:37</time>
                  <span>
                      
                          Passé en "Candidature déclinée"
                      
                      par John DOE
                  </span>
              </li>
          
          <li>
              <time datetime="2023-12-10T10:11:00+00:00">Le 10 décembre 2023 à 11:11</time>
              <span>Nouvelle candidature</span>
          </li>
      
  </ul>
  '''
# ---
# name: ProcessViewsTest.test_postpone_from_employer_orienter[postpone_email_to_job_seeker_body]
  '''
  Bonjour,
  
  Suite à votre candidature au sein de la structure EI Acme inc., l’employeur a mis votre candidature en attente.
  
  Commentaire de l’employeur:
  
  On vous rappellera.
  
  ---
  [DEV] Cet email est envoyé depuis un environnement de démonstration, merci de ne pas en tenir compte [DEV]
  Les emplois de l'inclusion
  http://localhost:8000
  '''
# ---
# name: ProcessViewsTest.test_postpone_from_employer_orienter[postpone_email_to_job_seeker_subject]
  '[DEV] Votre candidature mise en attente par EI Acme inc.'
# ---
# name: ProcessViewsTest.test_postpone_from_employer_orienter[postpone_email_to_proxy_body]
  '''
  Bonjour,
  
  La candidature de Jane DOE au sein de la structure EI Acme inc. a été mise en attente par l’employeur.
  
  Commentaire de l’employeur:
  
  On vous rappellera.
  
  ---
  [DEV] Cet email est envoyé depuis un environnement de démonstration, merci de ne pas en tenir compte [DEV]
  Les emplois de l'inclusion
  http://localhost:8000
  '''
# ---
# name: ProcessViewsTest.test_postpone_from_employer_orienter[postpone_email_to_proxy_subject]
  '[DEV] Candidature de Jane DOE mise en attente par EI Acme inc.'
# ---
# name: ProcessViewsTest.test_postpone_from_job_seeker[postpone_email_to_job_seeker_body]
  '''
  Bonjour,
  
  Suite à votre candidature au sein de la structure EI Acme inc., l’employeur a mis votre candidature en attente.
  
  Commentaire de l’employeur:
  
  On vous rappellera.
  
  ---
  [DEV] Cet email est envoyé depuis un environnement de démonstration, merci de ne pas en tenir compte [DEV]
  Les emplois de l'inclusion
  http://localhost:8000
  '''
# ---
# name: ProcessViewsTest.test_postpone_from_job_seeker[postpone_email_to_job_seeker_subject]
  '[DEV] Votre candidature mise en attente par EI Acme inc.'
# ---
# name: ProcessViewsTest.test_postpone_from_prescriber[postpone_email_to_job_seeker_body]
  '''
  Bonjour,
  
  Suite à votre candidature au sein de la structure EI Acme inc., l’employeur a mis votre candidature en attente.
  
  ---
  [DEV] Cet email est envoyé depuis un environnement de démonstration, merci de ne pas en tenir compte [DEV]
  Les emplois de l'inclusion
  http://localhost:8000
  '''
# ---
# name: ProcessViewsTest.test_postpone_from_prescriber[postpone_email_to_job_seeker_subject]
  '[DEV] Votre candidature mise en attente par EI Acme inc.'
# ---
# name: ProcessViewsTest.test_postpone_from_prescriber[postpone_email_to_proxy_body]
  '''
  Bonjour,
  
  La candidature de Jane DOE au sein de la structure EI Acme inc. a été mise en attente par l’employeur.
  
  ---
  [DEV] Cet email est envoyé depuis un environnement de démonstration, merci de ne pas en tenir compte [DEV]
  Les emplois de l'inclusion
  http://localhost:8000
  '''
# ---
# name: ProcessViewsTest.test_postpone_from_prescriber[postpone_email_to_proxy_subject]
  '[DEV] Candidature de Jane DOE mise en attente par EI Acme inc.'
# ---
# name: TestProcessTransferJobApplication.test_job_application_external_transfer_disabled_for_bad_state
  '''
  <div class="dropdown dropdown-structure">
      <button aria-expanded="false" aria-haspopup="true" class="btn btn-lg btn-link-white btn-block w-lg-auto dropdown-toggle" data-bs-toggle="dropdown" id="transfer_to_button" type="button">
          Transférer cette candidature vers
      </button>
      <div aria-labelledby="transfer_to_button" class="dropdown-menu w-100">
          
          
              <div data-bs-placement="bottom" data-bs-toggle="tooltip" title="Vous devez d’abord décliner la candidature pour pouvoir la transférer à un autre employeur">
                  <div class="dropdown-item disabled">
                      <i class="ri-home-smile-line"></i>
                      <strong>Une autre structure</strong>
                  </div>
              </div>
          
      </div>
  </div>
  '''
# ---
# name: TestProcessTransferJobApplication.test_job_application_external_transfer_only_for_lone_users
  '''
  <div class="dropdown dropdown-structure">
      <button aria-expanded="false" aria-haspopup="true" class="btn btn-lg btn-link-white btn-block w-lg-auto dropdown-toggle" data-bs-toggle="dropdown" id="transfer_to_button" type="button">
          Transférer cette candidature vers
      </button>
      <div aria-labelledby="transfer_to_button" class="dropdown-menu w-100">
          
          
              <a class="dropdown-item" href="/apply/[PK of JobApplication]/siae/external-transfer/1">
                  <i class="ri-home-smile-line"></i>
                  <strong>Une autre structure</strong>
              </a>
          
      </div>
  </div>
  '''
# ---
# name: TestProcessTransferJobApplication.test_job_application_transfer_redirection[job application transfer message]
  'La candidature de <>Html Escaped<> DOE a bien été transférée à Acme inc.||Pour la consulter, rendez-vous sur son tableau de bord en changeant de structure'
# ---
# name: test_add_prior_action_processing
  '''
  <ul class="list-step" hx-swap-oob="true" id="transition_logs_11111111-1111-1111-1111-111111111111">
      
          
              <li>
                  <time datetime="2023-12-12T12:37:00+00:00">Le 12 décembre 2023 à 13:37</time>
                  <span>
                      
                          Passé en "Action préalable à l’embauche"
                      
                      par John DOE
                  </span>
              </li>
          
          <li>
              <time datetime="2023-12-10T10:11:11+00:00">Le 10 décembre 2023 à 11:11</time>
              <span>Nouvelle candidature</span>
          </li>
      
  </ul>
  '''
# ---
# name: test_delete_prior_action[False]
  '''
  <ul class="list-step" hx-swap-oob="true" id="transition_logs_11111111-1111-1111-1111-111111111111">
      
          
              <li>
                  <time datetime="2023-12-12T12:40:00+00:00">Le 12 décembre 2023 à 13:40</time>
                  <span>
                      
                          Passé en "Action préalable à l’embauche"
                      
                      par John DOE
                  </span>
              </li>
          
              <li>
                  <time datetime="2023-12-12T12:37:00+00:00">Le 12 décembre 2023 à 13:37</time>
                  <span>
                      
                          Passé en "Candidature à l'étude"
                      
                      par John DOE
                  </span>
              </li>
          
          <li>
              <time datetime="2023-12-10T10:11:11+00:00">Le 10 décembre 2023 à 11:11</time>
              <span>Nouvelle candidature</span>
          </li>
      
  </ul>
  '''
# ---
# name: test_delete_prior_action[True]
  '''
  <ul class="list-step" hx-swap-oob="true" id="transition_logs_11111111-1111-1111-1111-111111111111">
      
          
              <li>
                  <time datetime="2023-12-12T12:40:00+00:00">Le 12 décembre 2023 à 13:40</time>
                  <span>
                      
                          Passé en "Action préalable à l’embauche"
                      
                      par John DOE
                  </span>
              </li>
          
              <li>
                  <time datetime="2023-12-12T12:37:00+00:00">Le 12 décembre 2023 à 13:37</time>
                  <span>
                      
                          Passé en "Candidature à l'étude"
                      
                      par John DOE
                  </span>
              </li>
          
          <li>
              <time datetime="2023-12-10T10:11:11+00:00">Le 10 décembre 2023 à 11:11</time>
              <span>Nouvelle candidature</span>
          </li>
      
  </ul>
  '''
# ---
# name: test_reload_contract_type_and_options[APPRENTICESHIP]
  '''
  
  <div id="geiq_contract_type_and_options_block">
      <div class="form-group is-invalid form-group-required"><label class="form-label" for="id_prehiring_guidance_days">Nombre de jours d’accompagnement avant contrat</label><input type="number" name="prehiring_guidance_days" min="0" class="form-control is-invalid" placeholder="Nombre de jours d’accompagnement avant contrat" required aria-invalid="true" aria-describedby="id_prehiring_guidance_days_helptext" id="id_prehiring_guidance_days">
      <div class="invalid-feedback">Ce champ est obligatoire.</div>
  
  <div class="form-text">Laissez "0" si vous n'avez pas accompagné le candidat avant son embauche</div>
  </div>
      <div class="form-group form-group-required"><label class="form-label" for="id_contract_type">Type de contrat</label><select name="contract_type" hx-trigger="change" hx-post="/apply/10/accept/reload_contract_type_and_options" hx-swap="outerHTML" hx-select="#geiq_contract_type_and_options_block" hx-target="#geiq_contract_type_and_options_block" class="form-select" required id="id_contract_type">
    <option value="">---------</option>
  
    <option value="APPRENTICESHIP" selected>Contrat d&#x27;apprentissage</option>
  
    <option value="PROFESSIONAL_TRAINING">Contrat de professionalisation</option>
  
    <option value="OTHER">Autre type de contrat</option>
  
  </select></div>
      <div class="form-group"><div class="form-check"><input type="checkbox" name="inverted_vae_contract" class="form-check-input" disabled id="id_inverted_vae_contract"><label class="form-check-label" for="id_inverted_vae_contract">Contrat associé à une VAE inversée</label></div></div>
      
      <div class="form-group form-group-required"><label class="form-label" for="id_nb_hours_per_week">Nombre d&#x27;heures par semaine</label><input type="number" name="nb_hours_per_week" min="0" class="form-control" placeholder="Nombre d&#x27;heures par semaine" required id="id_nb_hours_per_week"></div>
  </div>
  
  '''
# ---
# name: test_reload_contract_type_and_options[OTHER]
  '''
  
  <div id="geiq_contract_type_and_options_block">
      <div class="form-group is-invalid form-group-required"><label class="form-label" for="id_prehiring_guidance_days">Nombre de jours d’accompagnement avant contrat</label><input type="number" name="prehiring_guidance_days" min="0" class="form-control is-invalid" placeholder="Nombre de jours d’accompagnement avant contrat" required aria-invalid="true" aria-describedby="id_prehiring_guidance_days_helptext" id="id_prehiring_guidance_days">
      <div class="invalid-feedback">Ce champ est obligatoire.</div>
  
  <div class="form-text">Laissez "0" si vous n'avez pas accompagné le candidat avant son embauche</div>
  </div>
      <div class="form-group form-group-required"><label class="form-label" for="id_contract_type">Type de contrat</label><select name="contract_type" hx-trigger="change" hx-post="/apply/10/accept/reload_contract_type_and_options" hx-swap="outerHTML" hx-select="#geiq_contract_type_and_options_block" hx-target="#geiq_contract_type_and_options_block" class="form-select" required id="id_contract_type">
    <option value="">---------</option>
  
    <option value="APPRENTICESHIP">Contrat d&#x27;apprentissage</option>
  
    <option value="PROFESSIONAL_TRAINING">Contrat de professionalisation</option>
  
    <option value="OTHER" selected>Autre type de contrat</option>
  
  </select></div>
      <div class="form-group"><div class="form-check"><input type="checkbox" name="inverted_vae_contract" class="form-check-input" disabled id="id_inverted_vae_contract"><label class="form-check-label" for="id_inverted_vae_contract">Contrat associé à une VAE inversée</label></div></div>
      
          <div id="contractTypeDetails"><div class="form-group"><label class="form-label" for="id_contract_type_details">Précisions sur le type de contrat</label><textarea name="contract_type_details" cols="40" rows="2" class="form-control" placeholder="Précisions sur le type de contrat" aria-describedby="id_contract_type_details_helptext" id="id_contract_type_details">
  </textarea><div class="form-text">Si vous avez choisi un autre type de contrat, merci de bien vouloir fournir plus de précisions</div>
  </div></div>
      
      <div class="form-group form-group-required"><label class="form-label" for="id_nb_hours_per_week">Nombre d&#x27;heures par semaine</label><input type="number" name="nb_hours_per_week" min="0" class="form-control" placeholder="Nombre d&#x27;heures par semaine" required id="id_nb_hours_per_week"></div>
  </div>
  
  '''
# ---
# name: test_reload_contract_type_and_options[PROFESSIONAL_TRAINING]
  '''
  
  <div id="geiq_contract_type_and_options_block">
      <div class="form-group is-invalid form-group-required"><label class="form-label" for="id_prehiring_guidance_days">Nombre de jours d’accompagnement avant contrat</label><input type="number" name="prehiring_guidance_days" min="0" class="form-control is-invalid" placeholder="Nombre de jours d’accompagnement avant contrat" required aria-invalid="true" aria-describedby="id_prehiring_guidance_days_helptext" id="id_prehiring_guidance_days">
      <div class="invalid-feedback">Ce champ est obligatoire.</div>
  
  <div class="form-text">Laissez "0" si vous n'avez pas accompagné le candidat avant son embauche</div>
  </div>
      <div class="form-group form-group-required"><label class="form-label" for="id_contract_type">Type de contrat</label><select name="contract_type" hx-trigger="change" hx-post="/apply/10/accept/reload_contract_type_and_options" hx-swap="outerHTML" hx-select="#geiq_contract_type_and_options_block" hx-target="#geiq_contract_type_and_options_block" class="form-select" required id="id_contract_type">
    <option value="">---------</option>
  
    <option value="APPRENTICESHIP">Contrat d&#x27;apprentissage</option>
  
    <option value="PROFESSIONAL_TRAINING" selected>Contrat de professionalisation</option>
  
    <option value="OTHER">Autre type de contrat</option>
  
  </select></div>
      <div class="form-group"><div class="form-check"><input type="checkbox" name="inverted_vae_contract" class="form-check-input" id="id_inverted_vae_contract"><label class="form-check-label" for="id_inverted_vae_contract">Contrat associé à une VAE inversée</label></div></div>
      
      <div class="form-group form-group-required"><label class="form-label" for="id_nb_hours_per_week">Nombre d&#x27;heures par semaine</label><input type="number" name="nb_hours_per_week" min="0" class="form-control" placeholder="Nombre d&#x27;heures par semaine" required id="id_nb_hours_per_week"></div>
  </div>
  
  '''
# ---
# name: test_reload_qualification_fields[CCN]
  '''
  
  <div id="geiq_qualification_fields_block">
      <div class="form-group form-group-required"><label class="form-label" for="id_qualification_type">Type de qualification visé</label><select name="qualification_type" hx-trigger="change" hx-post="/apply/10/accept/reload_qualification_fields" hx-swap="outerHTML" hx-select="#geiq_qualification_fields_block" hx-target="#geiq_qualification_fields_block" class="form-select" required id="id_qualification_type">
    <option value="">---------</option>
  
    <option value="STATE_DIPLOMA">Diplôme d&#x27;état ou titre homologué</option>
  
    <option value="CQP">CQP</option>
  
    <option value="CCN" selected>Positionnement de CCN</option>
  
  </select></div>
      <div class="form-group form-group-required"><label class="form-label" for="id_qualification_level">Niveau de qualification</label><select name="qualification_level" class="form-select" required id="id_qualification_level">
    <option value="" selected>---------</option>
  
    <option value="LEVEL_3">Niveau 3 (CAP, BEP)</option>
  
    <option value="LEVEL_4">Niveau 4 (BP, Bac général, Techno ou Pro, BT)</option>
  
    <option value="LEVEL_5">Niveau 5 ou + (Bac+2 ou +)</option>
  
    <option value="NOT_RELEVANT">Non concerné</option>
  
  </select></div>
      <div class="form-group form-group-required"><label class="form-label" for="id_planned_training_hours">Nombre d&#x27;heures de formation prévues</label><input type="number" name="planned_training_hours" value="0" min="0" class="form-control" placeholder="Nombre d&#x27;heures de formation prévues" required id="id_planned_training_hours"></div>
  </div>
  
  '''
# ---
# name: test_reload_qualification_fields[CQP]
  '''
  
  <div id="geiq_qualification_fields_block">
      <div class="form-group form-group-required"><label class="form-label" for="id_qualification_type">Type de qualification visé</label><select name="qualification_type" hx-trigger="change" hx-post="/apply/10/accept/reload_qualification_fields" hx-swap="outerHTML" hx-select="#geiq_qualification_fields_block" hx-target="#geiq_qualification_fields_block" class="form-select" required id="id_qualification_type">
    <option value="">---------</option>
  
    <option value="STATE_DIPLOMA">Diplôme d&#x27;état ou titre homologué</option>
  
    <option value="CQP" selected>CQP</option>
  
    <option value="CCN">Positionnement de CCN</option>
  
  </select></div>
      <div class="form-group form-group-required"><label class="form-label" for="id_qualification_level">Niveau de qualification</label><select name="qualification_level" class="form-select" required id="id_qualification_level">
    <option value="" selected>---------</option>
  
    <option value="LEVEL_3">Niveau 3 (CAP, BEP)</option>
  
    <option value="LEVEL_4">Niveau 4 (BP, Bac général, Techno ou Pro, BT)</option>
  
    <option value="LEVEL_5">Niveau 5 ou + (Bac+2 ou +)</option>
  
    <option value="NOT_RELEVANT">Non concerné</option>
  
  </select></div>
      <div class="form-group form-group-required"><label class="form-label" for="id_planned_training_hours">Nombre d&#x27;heures de formation prévues</label><input type="number" name="planned_training_hours" value="0" min="0" class="form-control" placeholder="Nombre d&#x27;heures de formation prévues" required id="id_planned_training_hours"></div>
  </div>
  
  '''
# ---
# name: test_reload_qualification_fields[STATE_DIPLOMA]
  '''
  
  <div id="geiq_qualification_fields_block">
      <div class="form-group form-group-required"><label class="form-label" for="id_qualification_type">Type de qualification visé</label><select name="qualification_type" hx-trigger="change" hx-post="/apply/10/accept/reload_qualification_fields" hx-swap="outerHTML" hx-select="#geiq_qualification_fields_block" hx-target="#geiq_qualification_fields_block" class="form-select" required id="id_qualification_type">
    <option value="">---------</option>
  
    <option value="STATE_DIPLOMA" selected>Diplôme d&#x27;état ou titre homologué</option>
  
    <option value="CQP">CQP</option>
  
    <option value="CCN">Positionnement de CCN</option>
  
  </select></div>
      <div class="form-group form-group-required"><label class="form-label" for="id_qualification_level">Niveau de qualification</label><select name="qualification_level" class="form-select" required id="id_qualification_level">
    <option value="" selected>---------</option>
  
    <option value="LEVEL_3">Niveau 3 (CAP, BEP)</option>
  
    <option value="LEVEL_4">Niveau 4 (BP, Bac général, Techno ou Pro, BT)</option>
  
    <option value="LEVEL_5">Niveau 5 ou + (Bac+2 ou +)</option>
  
  </select></div>
      <div class="form-group form-group-required"><label class="form-label" for="id_planned_training_hours">Nombre d&#x27;heures de formation prévues</label><input type="number" name="planned_training_hours" value="0" min="0" class="form-control" placeholder="Nombre d&#x27;heures de formation prévues" required id="id_planned_training_hours"></div>
  </div>
  
  '''
# ---
